--- a/bx-react-1-fe/src/app.scss
+++ b/bx-react-1-fe/src/app.scss
@@ -1,3 +1,22 @@
+$max-height: 100vh;
+$max-height: 100lvh;
+$max-height: 100dvh;
+$max-height: 100svh;
+$page-padding: 10px;
+$page-height: calc(100vh - #{$page-padding * 2});
+
+html, body, #root {
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  margin-top: 0;
+}
+
 .main {
-  color: black;
+  background-color: #e5e5e5;
+  height: $page-height;
+  max-height: $page-height;
+  padding: 10px;
 }
